log
Thu 21 Mar 2024 03:02:38 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:5: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   50 |     push_back(L, elemento);
      |     ^~~~~~~~~
      |     pushBack
cc1: all warnings being treated as errors
Compilation failed
f97b78a
Thu 21 Mar 2024 03:05:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
2e9c288
Fri 22 Mar 2024 01:30:00 AM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
acac979
Fri 22 Mar 2024 01:43:22 AM UTC: 
 exercises.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:96:3: error: expected ‘,’ or ‘;’ before ‘while’
   96 |   while (top(P1) != NULL) {
      |   ^~~~~
exercises.c:103:28: error: expected ‘;’ before ‘pop’
  103 |     push(P2, top(copiaInv))
      |                            ^
      |                            ;
  104 |     pop(copiaInv);
      |     ~~~                     
Compilation failed
1228d21
Fri 22 Mar 2024 01:43:31 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:96:3: error: expected ‘,’ or ‘;’ before ‘while’
   96 |   while (top(P1) != NULL) {
      |   ^~~~~
Compilation failed
afeaa0f
